feat(all): create building blocks for nav

--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,71 @@ html {
 *, *::before, *::after {
     box-sizing: inherit;
 }
+
+/* --------------------------
+  Base Styles
+--------------------------- */
+
+* {
+  box-sizing: border-box; 
+}
+
+body {
+    color: #797e83;
+    font-size: 16px;
+	margin: 0;
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.5; 
+}
+
+ul,
+li {
+    margin: 0;
+    padding: 0;
+    list-style-type: none; 
+}
+
+a {
+    color: #656a6e;
+    text-decoration: none;
+    font-weight: 400; 
+}
+
+.main-wrapper {
+    width: 90%;
+	margin: auto;
+}
+
+/* --------------------------
+  Header, Banner and Footer Layout
+--------------------------- */
+
+.main-header {
+    overflow: hidden;
+}
+
+
+/* --------------------------
+  Media Queries
+--------------------------- */
+
+@media (min-width: 769px) {
+
+	p {
+		-webkit-column-count: 2;
+		-webkit-column-gap: 2.5em;
+	
+		-moz-column-count: 2;
+		-moz-column-gap: 2.5em;
+	
+		column-count: 2;
+		column-gap: 2.5em;
+	}
+}
+
+@media (min-width: 1200px) {
+	.main-wrapper {
+		width: 90%;
+        margin: auto;
+	}
+}
