--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ html {
 }
 
 /* --------------------------
-  Header, Banner and Footer Layout
+  STICKY FOOTER
 --------------------------- */
 
 html, body {
@@ -151,7 +151,7 @@ img {
 
 figure {
     display: inline-block;
-    margin: -5px;
+    margin: 0;
     width: 400px;
     position: relative;
     overflow: hidden;
