--- a/css/main.css
+++ b/css/main.css
@@ -51,14 +51,6 @@ html, body {
   MAIN CONTENT
 --------------------------- */
 
-body {
-    color: #797e83;
-    font-size: 16px;
-	margin: 0;
-    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    line-height: 1.5; 
-}
-
 ul,
 li {
     margin: 0;
@@ -142,8 +134,9 @@ a {
     margin: 0 auto 5em auto;
 }
 
-section > h3 {
-    margin: 1.2em auto 2em auto;  
+#name {
+    margin: 1em auto 1.5em auto;
+    text-align: center;
 }
 
 .profile-pic {
@@ -184,7 +177,7 @@ figcaption {
     color: white;
     position: absolute;
     width: 100%;
-    bottom: -6.12em;
+    bottom: -7em;
     transition: all 200ms ease-out;
 }
 
@@ -226,6 +219,10 @@ figure:hover figcaption {
     color: white;
     text-align: center;
     margin: 0 auto;
+}
+
+.terms p {
+    text-align: center;
 }
 
 /* --------------------------
