feat(css): create font size classes

--- a/css/typography.css
+++ b/css/typography.css
@@ -10,31 +10,49 @@ body {
     margin: 0;
 }
 
-h1 {
+.yotta {
+    font-size: 2.28rem
+}
+
+.zetta {
+    font-size: 2.027rem;
+}
+
+h1, .exa {
     font-size: 1.802rem
 }
 
-h2 {
+h2, .peta {
     font-size: 1.602rem;
 }
 
-h3 {
+h3, tera {
     font-size: 1.424rem;
 }
 
-h4 {
+h4, giga {
     font-size: 1.266rem;
 }
 
-h5 {
+h5, .mega {
     font-size: 1.125rem;
 }
 
-h6 {
+h6, .kilo {
     font-size: 1rem; 
+}
+
+.mili {
+    font-size: 0.889rem;
+}
+
+.micro {
+    font-size: 0.79rem; 
 }
 
 p {
     margin: 0.5rem;
 }
+
+
 
