feat(all): create vertical rhythm in typography

--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,10 @@ figure:hover figcaption {
     bottom: 0em;
 }
 
+figcaption > h3 {
+    text-align: center;
+}
+
 .previews {
     height: 100%;
 
