--- a/css/typography.css
+++ b/css/typography.css
@@ -2,6 +2,13 @@ html {
     font: normal 100%/1.5 "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6,
+p, ul, ol, dl, dd,
+blockquote, details, hr,
+fieldset, pre, table {
+    margin: 0 0 1.5rem 0;
+}
+
 body {
     color: #797e83;
     font-size: 16px;
@@ -10,49 +17,124 @@ body {
     margin: 0;
 }
 
+p {
+    margin: 0.5rem;
+}
+
+/* --------------------------
+  BRAND HEADLINES
+--------------------------- 
+
+h1, h2, h3, h4, h5, h6,
+.brand {
+    color: #52bab3;
+}
+
+.brand-family {
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.brand-color {
+    color: #52bab3;
+} */
+
+
+
+/* --------------------------
+  HEADLINES ON BASELINE GRID
+--------------------------- */
+
 .yotta {
-    font-size: 2.28rem
+    font-size: 2.2807rem;
+    line-height: 1.3154;
 }
 
 .zetta {
     font-size: 2.027rem;
+    line-height: 1.4798;
 }
 
 h1, .exa {
-    font-size: 1.802rem
+    font-size: 1.802rem;
+    line-height: 1.6648;
 }
 
 h2, .peta {
-    font-size: 1.602rem;
+    font-size: 1.6018rem;
+    line-height: 1.8729;
 }
 
 h3, tera {
-    font-size: 1.424rem;
+    font-size: 1.4238rem;
+    line-height: 1.0535;
 }
 
 h4, giga {
-    font-size: 1.266rem;
+    font-size: 1.2656rem;
+    line-height: 1.1852;
 }
 
 h5, .mega {
-    font-size: 1.125rem;
+    font-size: 1.1250rem;
+    line-height: 1.3333;
 }
 
 h6, .kilo {
-    font-size: 1rem; 
+    font-size: 1.0000rem;
+    line-height: 1.5000; 
 }
 
 .mili {
-    font-size: 0.889rem;
+    font-size: 0.8889rem;
+    line-height: 1.6875;
 }
 
 .micro {
-    font-size: 0.79rem; 
+    font-size: 0.7901rem;
+    line-height: 1.8984;
 }
 
-p {
-    margin: 0.5rem;
+/* --------------------------
+  ELEMENTS ON BASELINE GRID
+--------------------------- */
+
+.push {
+    margin-bottom: 1.5rem;
 }
+
+.push-half {
+    margin-bottom: 0.75rem;
+}
+
+.push-double {
+    margin-bottom: 3rem;
+}
+
+.pad-top {
+  padding-top: 1.5rem;
+}
+
+.pad-bottom {
+  padding-bottom: 1.5rem;
+}
+
+.pad-top-double {
+  padding-top: 3.0000rem;
+}
+
+.pad-bottom-double {
+  padding-bottom: 3.0000rem;
+}
+
+.pad-top-half {
+  padding-top: 0.7500rem;
+}
+
+.pad-bottom-half {
+  padding-bottom: 0.7500rem;
+}
+
+
 
 
 
