--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul class="nav">
                     <li><a href="#">All</a></li>
-                    <li><a href="#">Typography</a></li>
+                    <li><a href="typography.html">Typography</a></li>
                     <li><a href="#">Illustration</a></li>
                     <li><a href="#">Interactive</a></li>
                     <li><a href="#">Motion</a></li>
@@ -38,6 +38,7 @@
     <!--
         FOOTER
     -->
+        
     </div>  
     <footer class="footer">
         <img class="social-media-icons" src="http://placehold.it/100x100" alt="Behance">
