--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
             </h1>
             <nav>
                 <ul class="nav">
-                    <li><a href="#">All</a></li>
-                    <li><a href="typography.html">Typography</a></li>
+                    <li><a href="{{site.baseurl}}/index.html">All</a></li>
+                    <li><a href="{{site.baseurl}}/typography.html">Typography</a></li>
                     <li><a href="#">Illustration</a></li>
                     <li><a href="#">Interactive</a></li>
                     <li><a href="#">Motion</a></li>
