feat(html): create contact page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
                     <li><a href="#">Illustration</a></li>
                     <li><a href="#">Interactive</a></li>
                     <li><a href="#">Motion</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
