refactor(html): create paragraphs tags inside nav links

--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,15 @@ a {
     border-bottom-color: #52bab3;
 }
 
+.current {
+    color: #52bab3;
+}
+
+a + p {
+    margin: 0;
+}
+
+
 /* --------------------------
   CLEARFIX
 --------------------------- */
