--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,12 @@
             </h1>
             <nav>
                 <ul class="nav">
-                    <li><a href="index.html">All</a></li>
-                    <li><a href="typography.html">Typography</a></li>
-                    <li><a href="#">Illustration</a></li>
-                    <li><a href="#">Interactive</a></li>
-                    <li><a href="#">Motion</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html"><p>All</p></a></li>
+                    <li><a href="typography.html"><p>Typography</p></a></li>
+                    <li><a href="#"><p>Illustration</p></a></li>
+                    <li><a href="#"><p>Interactive</p></a></li>
+                    <li><a href="#"><p>Motion</p></a></li>
+                    <li><a href="contact.html"><p>Contact</p></a></li>
                 </ul>
             </nav>
         </header>
