feat(html): create pages for navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Sebastian's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/typography.css">
-    <link rel="stylesheet" href="css/grids.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/normalize.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/typography.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/grids.css">
 </head>
 <body>
     <div class="main-wrapper">
@@ -17,18 +17,18 @@
     -->
         <header class="main-header">
             <h1 class="main-logo">
-                <a href="index.html">
+                <a href="{{site.baseurl}}/">
                     <img class="logo-img" src="http://placehold.it/180x100" alt="Sebastian Nadeau">
                 </a>
             </h1>
             <nav>
                 <ul class="nav">
-                    <li><a href="index.html"><p>All</p></a></li>
-                    <li><a href="typography.html"><p>Typography</p></a></li>
-                    <li><a href="#"><p>Illustration</p></a></li>
-                    <li><a href="#"><p>Interactive</p></a></li>
-                    <li><a href="#"><p>Motion</p></a></li>
-                    <li><a href="contact.html"><p>Contact</p></a></li>
+                    <li><a href="{{site.baseurl}}/"><p>All</p></a></li>
+                    <li><a href="{{site.baseurl}}/typography/"><p>Typography</p></a></li>
+                    <li><a href="{{site.baseurl}}/illustration/"><p>Illustration</p></a></li>
+                    <li><a href="{{site.baseurl}}/interactive/"><p>Interactive</p></a></li>
+                    <li><a href="{{site.baseurl}}/motion/"><p>Motion</p></a></li>
+                    <li><a href="{{site.baseurl}}/contact.html"><p>Contact</p></a></li>
                 </ul>
             </nav>
         </header>
