--- a/css/main.css
+++ b/css/main.css
@@ -205,16 +205,31 @@ figcaption > h4 {
 }
 
 /* --------------------------
-  TYPOGRAPHY PAGE
+  BANNERS
 --------------------------- */
 
 .banner {
     width: 100%;
     height: 300px;
-    background-image:url(http://placehold.it/500x200);
     background-position: center;
     background-size: cover;
     background-repeat:no-repeat;
+}
+
+.typo {
+    background-image:url(http://placehold.it/500x180);
+}
+
+.illustration {
+    background-image:url(http://placehold.it/500x190);
+}
+
+.interactive {
+    background-image:url(http://placehold.it/500x200);
+}
+
+.motion {
+    background-image:url(http://placehold.it/500x210);
 }
 
 section figure {
