--- a/css/typography.css
+++ b/css/typography.css
@@ -20,7 +20,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6,
-p, ul, ol, dl, dd,
+p, ol, dl, dd,
 blockquote, details, hr,
 fieldset, pre, table {
     margin: 0 0 1.5rem 0;
@@ -115,15 +115,27 @@ h6, .kilo {
   ELEMENTS ON BASELINE GRID
 --------------------------- */
 
-.push {
+.push-top {
+    margin-top: 1.5rem;
+}
+
+.pudh-bottom {
     margin-bottom: 1.5rem;
 }
 
-.push-half {
+.push-top-half {
+    margin-top: 0.75rem;
+}
+
+.push-bottom-half {
     margin-bottom: 0.75rem;
 }
 
-.push-double {
+.push-top-double {
+    margin-top: 3rem;
+}
+
+.push-bottom-double {
     margin-bottom: 3rem;
 }
 
