--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
     <meta charset="utf-8">
-    <title>Sebastian's Portfolio</title>
+    <title>Sebastian Nadeau - Graphic Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{site.baseurl}}/css/normalize.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
