--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,12 @@
             </h1>
             <nav>
                 <ul class="nav">
-                    <li><a href="{{site.baseurl}}/all/"><p class="{% if page.url == '/all/' %}current{% endif %}">All</p></a></li>
-                    <li><a href="{{site.baseurl}}/typography/"><p class="{% if page.url == '/typography/' %}current{% endif %}">Typography</p></a></li>
-                    <li><a href="{{site.baseurl}}/illustration/"><p class="{% if page.url == '/illustration/' %}current{% endif %}">Illustration</p></a></li>
-                    <li><a href="{{site.baseurl}}/interactive/"><p class="{% if page.url == '/interactive/' %}current{% endif %}">Interactive</p></a></li>
-                    <li><a href="{{site.baseurl}}/motion/"><p class="{% if page.url == '/motion/' %}current{% endif %}">Motion</p></a></li>
-                    <li><a href="{{site.baseurl}}/contact/"><p class="{% if page.url == '/contact/' %}current{% endif %}">Contact</p></a></li>
+                    <li><a href="{{site.baseurl}}/all"><p class="{% if page.url == '/all/' %}current{% endif %}">All</p></a></li>
+                    <li><a href="{{site.baseurl}}/typography"><p class="{% if page.url == '/typography' %}current{% endif %}">Typography</p></a></li>
+                    <li><a href="{{site.baseurl}}/illustration"><p class="{% if page.url == '/illustration' %}current{% endif %}">Illustration</p></a></li>
+                    <li><a href="{{site.baseurl}}/interactive"><p class="{% if page.url == '/interactive' %}current{% endif %}">Interactive</p></a></li>
+                    <li><a href="{{site.baseurl}}/motion"><p class="{% if page.url == '/motion' %}current{% endif %}">Motion</p></a></li>
+                    <li><a href="{{site.baseurl}}/contact"><p class="{% if page.url == '/contact' %}current{% endif %}">Contact</p></a></li>
                 </ul>
             </nav>
         </header>
