refactor(html): make quick change in nav syntax

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
             </h1>
             <nav>
                 <ul class="nav">
-                    <li><a href="{{site.baseurl}}/all"><p class="{% if page.url == '/all/' %}current{% endif %}">All</p></a></li>
+                    <li><a href="{{site.baseurl}}/all"><p class="{% if page.url == '/all' %}current{% endif %}">All</p></a></li>
                     <li><a href="{{site.baseurl}}/typography"><p class="{% if page.url == '/typography' %}current{% endif %}">Typography</p></a></li>
                     <li><a href="{{site.baseurl}}/illustration"><p class="{% if page.url == '/illustration' %}current{% endif %}">Illustration</p></a></li>
                     <li><a href="{{site.baseurl}}/interactive"><p class="{% if page.url == '/interactive' %}current{% endif %}">Interactive</p></a></li>
