--- a/css/grids.css
+++ b/css/grids.css
@@ -13,7 +13,41 @@
 
 @media (min-width: 769px) {
     
-.unit-m-1-2 {
+    .unit-m-1-2 {
         width: 50%
+    }
+
+    .unit-m-1-3 {
+        width: 33.33333%   
+    }
+    
+    .unit-m-hidden {
+        visibility: hidden;
+        display: none;
+    }
+}
+
+@media (min-width: 900px) {
+    .unit-l-1-3 {
+        width: 33.3333%;   
+    }
+    
+    .unit-l-hidden {
+        visibility: hidden;
+        display: none;
+    }
+}
+
+@media (min-width: 1545px) {
+    .unit-h-1-2 {
+        width: 50%;
+        visibility: visible;
+        display: block;
+    }
+    
+   .unit-h-1-4 {
+        width: 25%;
+        visibility: visible;
+        display: block;
     }
 }
