refactor(all): create good vertical rhythm on page elements

--- a/css/main.css
+++ b/css/main.css
@@ -129,14 +129,19 @@ a + p {
 }
 
 #name {
-    margin: 1.3em auto 2.25em auto;
+    margin: 1.3em auto 0.355rem auto;
     text-align: center;
+}
+
+h3 + h5 {
+    text-align: center;
+    font-weight: normal;
 }
 
 .profile-pic {
     width: 12em;
     border-radius: 50%;
-    margin: 0 auto 1.5em auto;
+    margin: 3em auto 1.5em auto;
 }
 
 /* --------------------------
