refactor(all): change footer spacing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,10 +40,12 @@
     -->
         
     </div>  
-    <footer class="footer">
-        <img class="social-media-icons" src="http://placehold.it/100x100" alt="Behance">
-        <img class="social-media-icons" src="http://placehold.it/100x100" alt="Linked In">
-        <img class="social-media-icons" src="http://placehold.it/100x100" alt="Vimeo">
+    <footer>
+        <div>
+            <img class="social-media-icons" src="http://placehold.it/100x100" alt="Behance">
+            <img class="social-media-icons" src="http://placehold.it/100x100" alt="Linked In">
+            <img class="social-media-icons" src="http://placehold.it/100x100" alt="Vimeo">
+        </div>
         <p class="copyright">© Copyright 2015 Sebastian Nadeau</p>
         <a class="terms" href="#">
             <p>Terms and Privacy</p>
