--- a/css/typography.css
+++ b/css/typography.css
@@ -23,8 +23,7 @@ h1 {
     margin: 0.5rem;
 }
 
-h2, h3, h4, h5, h6,
-p, ol, dl, dd,
+h2, h3, h4, h5, h6, ol, dl, dd,
 blockquote, details, hr,
 fieldset, pre, table {
     margin: 0 0 1.5rem 0;
