--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ a {
     position: relative;
     display: flex;
     flex-direction: column;
-    padding: 1.5em 0 0.75em;
+    padding-bottom: 0.75em;
 }
 
 .main-logo {
@@ -375,6 +375,7 @@ footer > div {
 		justify-content: space-between;
         max-width: 72%;
         margin: 0 auto;
+        padding: 1.5em 0 0.75em;
 	}
 	.nav {
         display: flex;
