--- a/css/typography.css
+++ b/css/typography.css
@@ -20,7 +20,7 @@ html {
 }
 
 h1 {
-    margin: 0.5rem;
+    margin: 0.5em 0.5rem 0.75em;
 }
 
 h2, h3, h4, h5, h6, ol, dl, dd,
@@ -166,6 +166,12 @@ h6, .kilo {
 
 .pad-bottom-half {
   padding-bottom: 0.7500rem;
+}
+
+@media (min-width: 769px) { 
+    h1 {
+        margin: 0.5rem;
+    }
 }
 
 
