--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ nav {
     display: none;
     position: absolute;
     right: 0;
-    top: 100%;
+    top: 0;
     width: 100%;
     background-color: #797e83;
 }
