feat: create pretty urls

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -1,6 +1,6 @@
 <div class="grid">
     <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
-        <a href="{{site.baseurl}}../typography/bridgehead.html">
+        <a href="{{site.baseurl}}../typography/bridgehead/">
             <img src="http://placehold.it/300x200" alt="Project 1">
         </a>
         <figcaption>
