feat(all): create image gallery button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,6 @@
         </a>
     </footer>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="js/lightbox/jquery.magnific-popup.min.js"></script>
+    <script src="/js/lightbox/jquery.magnific-popup.min.js"></script>
 </body>
 </html>
