--- a/css/main.css
+++ b/css/main.css
@@ -308,6 +308,29 @@ section figure:hover figcaption {
     bottom: 0em;
 }
 
+/* --------------------------
+  BUTTONS
+--------------------------- */
+
+button {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0.75em 0;
+}
+
+button > img {
+    display: inline-block;
+    width: 3.5em;
+    vertical-align: middle;
+    padding-right: 0.75em;
+}
+
+img + p {
+    display: inline-block;
+    vertical-align: middle;
+}
+
 
 /* --------------------------
   FOOTER
