feat(all): create grid on typography page

--- a/css/main.css
+++ b/css/main.css
@@ -331,6 +331,10 @@ img + p {
     vertical-align: middle;
 }
 
+button:hover {
+    color: #52bab3;
+}
+
 
 /* --------------------------
   FOOTER
