--- a/css/grids.css
+++ b/css/grids.css
@@ -28,13 +28,15 @@
 }
 
 @media (min-width: 1000px) {
-    .unit-l-1-3 {
-        width: 33.3333%;   
-    }
-    
     .unit-l-hidden {
         visibility: hidden;
         display: none;
+    }
+    
+    .unit-l-1-3 {
+        width: 33.3333%;
+        visibility: visible;
+        display: block;
     }
 }
 
