feat(all): add initial lightbox set up

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,5 +59,6 @@
     </footer>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="/js/lightbox/jquery.magnific-popup.min.js"></script>
+    <script src="/js/lightbox.js"></script>
 </body>
 </html>
