--- a/css/main.css
+++ b/css/main.css
@@ -316,7 +316,6 @@ button {
     display: block;
     width: 100%;
     margin: 0 auto;
-    padding: 0.75em 0;
 }
 
 button > img {
@@ -334,6 +333,15 @@ img + p {
 button:hover {
     color: #52bab3;
 }
+
+/* --------------------------
+  JAVASCRIPT
+--------------------------- */
+
+#open-bridgehead-popup {
+    padding: 0.75em 0;
+}
+
 
 
 /* --------------------------
