--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,6 @@ nav {
 }
 
 .nav {
-    margin-top: 1.5em;
     margin-left: auto;
     margin right: auto;
     display: none;
@@ -139,7 +138,7 @@ nav {
     width: 60px;
     position: absolute;
     right: 0;
-    bottom: -1.5em;
+    bottom: 0em;
 }
 
 .nav-open,
@@ -251,12 +250,12 @@ figcaption > h1 {
     line-height: 1.1852;
     text-align: center;
     color: white;
-    padding: 0.355em 0;
+    margin: 0.75em 0;
 }
 
 figcaption > h4 {
     text-align: center;
-    padding: 0.355em 0;
+    margin: 0.75em 0;
 }
 
 .previews {
