feat(all): create a new vertical layout for an illustration project

--- a/_includes/illustration.html
+++ b/_includes/illustration.html
@@ -1,9 +1,9 @@
 <div class="grid">
     <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
-        <a href="#">
+        <a href="{{site.baseurl}}../illustration/tennis-serve/">
             <img src="http://placehold.it/300x200" alt="Project 1">
             <figcaption>
-                <h5>Project 1</h5>
+                <h5>The Tennis Serve</h5>
             </figcaption>
         </a>
     </figure>
