--- a/css/grids.css
+++ b/css/grids.css
@@ -11,6 +11,10 @@
     width: 100%;
 }
 
+.unit-s-1-2 {
+    width: 50%;
+}
+
 @media (min-width: 769px) {
     
     .unit-m-1-2 {
@@ -38,13 +42,26 @@
         visibility: visible;
         display: block;
     }
+    
+    .unit-l-1-4 {
+        width: 25%;   
+    }
 }
 
 @media (min-width: 1545px) {
+    .unit-h-hidden {
+        visibility: hidden;
+        display: none;
+    }
+    
     .unit-h-1-2 {
         width: 50%;
         visibility: visible;
         display: block;
+    }
+    
+    .unit-h-1-3 {
+        width: 33.333333%   
     }
     
    .unit-h-1-4 {
@@ -52,4 +69,5 @@
         visibility: visible;
         display: block;
     }
+    
 }
