--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,5 +8,13 @@
 <div class="about">
     <img class="profile-pic" src="http://placehold.it/200x200" alt="Profile Picture">
     <h2 id="breathing-space">About</h2>
-    <p id="columns">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis lobortis quam id venenatis. Integer eget pulvinar elit. Nunc magna mauris, sollicitudin eget ex quis, sagittis pretium velit. Morbi eget tortor vel massa iaculis tincidunt in eget nunc. Curabitur ornare faucibus fringilla. Praesent magna neque, auctor ac euismod sed, suscipit sed lorem. Curabitur euismod tellus et nibh condimentum mollis. Phasellus eleifend semper augue, ut feugiat orci fringilla non. Cras vel ultricies eros. Sed sed ante a ante gravida efficitur quis non dui. Fusce sagittis ullamcorper metus et tempus.</p>
+    <p id="columns">Thank you for stopping by.
+        
+        It is my hope that in the next little while you will be curious and inspired by some thoughts and underlying pursuits that designers share that go beyond simply displaying information. 
+        
+        My goal is to really understand a community of people. I wish to understand their values, and what is important to them. It's important for me to understand those values because I want them to translate in the designs I create.
+        
+        I believe that great design happens when the design stirs an audience to engage in a message and react in a positive way. Either intellectually, emotionally, or even physically. When the viewer of a given design can resonate with it and share the same characteristics and values that it promotes, then it's good design. 
+        
+        The role I pursue in the whole design process is to communicate positive values and have my designs really impact some people in a positive way. Welcome to my Graphic Design online portfolio. I welcome you take a look around and enjoy the different projects that have been posted.</p>
 </div>
