--- a/_includes/illustration.html
+++ b/_includes/illustration.html
@@ -1,7 +1,7 @@
 <div class="grid">
     <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
         <a href="{{site.baseurl}}../illustration/tennis-serve/">
-            <img src="http://placehold.it/300x200" alt="Project 1">
+            <img src="{{site.baseurl}}/images/illustration/the-tennis-serve-cover.jpg" alt="The tennis serve">
             <figcaption>
                 <h5>The Tennis Serve</h5>
             </figcaption>
