style(all): set the senator illustrations in a grid

--- a/_includes/illustration.html
+++ b/_includes/illustration.html
@@ -9,10 +9,10 @@
     </figure>
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 2">
+        <a href="{{site.baseurl}}../illustration/senator-campaign/">
+            <img src="{{site.baseurl}}/images/illustration/senator-campaign-cover.jpg" alt="Project 2">
             <figcaption>
-                <h5>Project 2</h5>
+                <h5>Senator Campaign</h5>
             </figcaption>
         </a>
     </figure>
