--- a/css/grids.css
+++ b/css/grids.css
@@ -19,6 +19,22 @@
     width: 50%;
 }
 
+.unit-s-1-3 {
+    width: 33.3333%
+}
+
+.unit-s-2-3 {
+    width: 66.6666%
+}
+
+.unit-s-1-4 {
+    width: 25%;
+}
+
+.unit-s-3-4 {
+    width: 75%;
+}
+
 @media (min-width: 769px) {
     .unit-m-hidden {
         visibility: hidden;
