feat(all): add company poster images to illustration page

--- a/_includes/illustration.html
+++ b/_includes/illustration.html
@@ -10,7 +10,7 @@
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
         <a href="{{site.baseurl}}../illustration/senator-campaign/">
-            <img src="{{site.baseurl}}/images/illustration/senator-campaign-cover.jpg" alt="Project 2">
+            <img src="{{site.baseurl}}/images/illustration/senator-campaign-cover.jpg" alt="Senator Campaign">
             <figcaption>
                 <h5>Senator Campaign</h5>
             </figcaption>
@@ -18,10 +18,10 @@
     </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 3">
+        <a href="{{site.baseurl}}../illustration/company-poster/">
+            <img src="{{site.baseurl}}/images/illustration/company-poster-cover.jpg" alt="Company Poster">
             <figcaption>
-                <h5>Project 3</h5>
+                <h5>Company Poster</h5>
             </figcaption>
         </a>
     </figure>
