--- a/css/grids.css
+++ b/css/grids.css
@@ -69,6 +69,10 @@
     .unit-l-1-4 {
         width: 25%;   
     }
+    
+    .unit-l-2-3 {
+        width: 66.6666%;   
+    }
 }
 
 @media (min-width: 1545px) {
